EXTRA_DIST = \
	test-01.xml \
	test-02.xml \
	test-03.xml \
	test-04.xml \
	test-05.xml \
	test-06.xml \
	test-07.xml \
	test-08.xml \
	test-09.xml \
	test-10.xml \
	test-11.xml \
	test-12.xml \
	test-13.xml \
	test-14.xml \
	test-15.xml \
	test-16.xml \
	test-17.xml \
	test-18.xml \
	test-19.xml \
	test-20.xml \
	test-21.xml \
	test-22.xml \
	test-23.xml \
	test-24.xml \
	test-25.xml \
	test-26.xml \
	test-27.xml \
	test-28.xml \
	test-29.xml \
	test-30.xml \
	test-31.xml \
	test-32.xml \
	test-33.xml \
	test-34.xml \
	test-35.xml \
	test-36.xml \
	test-37.xml \
	test-38.xml \
	test-39.xml \
	test-40.xml \
	test-41.xml \
	test-42.xml \
	test-43.xml \
	test-44.xml \
	test-45.xml \
	test-46.xml \
	test-47.xml
